--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "deployer/recipes": "dev-master"
     },
     "scripts": {
         "symfony-scripts": [
