chore: add manifest.json path for cache bursting

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -7,6 +7,10 @@ imports:
 #        result_cache_driver: apc
 #        query_cache_driver: apc
 
+framework:
+    assets:
+        json_manifest_path: '%kernel.root_dir%/../web/manifest.json'
+
 monolog:
     handlers:
         main:
