--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "bootstrap-datepicker": "^1.6.4",
-    "google-maps": "^3.2.1",
     "jquery": "^3.1.1",
     "moment": "^2.18.1",
     "moment-precise-range": "^0.2.0",
-    "tempusdominus-core": "^5.0.0-alpha6"
+    "tempusdominus-bootstrap-3": "^5.0.0-alpha6"
   },
   "devDependencies": {
     "auto-reload-brunch": "^2.7.1",
