feat: create a service that will randomize url if event is private #2

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -29,6 +29,8 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
+    kotchuprik\short_id\ShortId: ~
+
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
