chore: add description and update psr-4 path

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
     "name": "jtonneau/fatidique",
+    "description": "",
     "license": "proprietary",
     "type": "project",
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "AppBundle\\": "src/AppBundle"
         },
         "classmap": [
             "app/AppKernel.php",
