--- a/composer.json
+++ b/composer.json
@@ -7,22 +7,22 @@
         "ext-iconv": "*",
         "kotchuprik/php-short-id": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "5.0.*",
-        "symfony/console": "5.0.*",
-        "symfony/dotenv": "5.0.*",
-        "symfony/expression-language": "5.0.*",
+        "symfony/asset": "^5.0",
+        "symfony/console": "^5.0",
+        "symfony/dotenv": "^5.0",
+        "symfony/expression-language": "^5.0",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "5.0.*",
-        "symfony/framework-bundle": "5.0.*",
+        "symfony/form": "^5.0",
+        "symfony/framework-bundle": "^5.0",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
-        "symfony/security-bundle": "5.0.*",
-        "symfony/string": "5.0.*",
+        "symfony/security-bundle": "^5.0",
+        "symfony/string": "^5.0",
         "symfony/twig-pack": "*",
-        "symfony/validator": "5.0.*",
-        "symfony/web-link": "5.0.*",
+        "symfony/validator": "^5.0",
+        "symfony/web-link": "^5.0",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "^5.0"
     },
     "require-dev": {
         "deployer/recipes": "^6.2",
@@ -75,7 +75,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.0.*"
+            "require": "^5.0"
         }
     }
 }
