--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,14 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.4.0",
+        "php": "^7.4.0 | ^8.0.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.3",
+        "deployer/deployer": "^7.0.0-beta.13",
+        "doctrine/doctrine-bundle": "^2.4",
+        "doctrine/doctrine-migrations-bundle": "^3.1",
+        "doctrine/orm": "^2.9",
         "kotchuprik/php-short-id": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^5.0",
@@ -15,21 +20,27 @@
         "symfony/form": "^5.0",
         "symfony/framework-bundle": "^5.0",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
+        "symfony/proxy-manager-bridge": "^5.0",
         "symfony/security-bundle": "^5.0",
         "symfony/string": "^5.0",
-        "symfony/twig-pack": "*",
+        "symfony/twig-bundle": "^5.0",
         "symfony/validator": "^5.0",
         "symfony/web-link": "^5.0",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "^5.0"
+        "symfony/yaml": "^5.0",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "deployer/recipes": "^6.2",
-        "symfony/debug-pack": "*",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "^5.0",
+        "symfony/css-selector": "^5.0",
+        "symfony/debug-bundle": "^5.0",
         "symfony/maker-bundle": "^1.0",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
+        "symfony/phpunit-bridge": "^5.3",
+        "symfony/stopwatch": "^5.0",
+        "symfony/web-profiler-bundle": "^5.0",
         "vimeo/psalm": "^3.7"
     },
     "config": {
