--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-    "devDependencies": {
-        "@symfony/webpack-encore": "^1.5.0",
-        "core-js": "^3.16.4",
-        "regenerator-runtime": "^0.13.9",
-        "webpack-notifier": "^1.13.0"
-    },
-    "license": "UNLICENSED",
+    "type": "module",
     "private": true,
     "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "dev": "vite",
+        "build": "vite build"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.16",
+        "daisyui": "^4.4.23",
+        "postcss": "^8.4.32",
+        "tailwindcss": "^3.4.0",
+        "vite": "^5.0",
+        "vite-plugin-symfony": "^6.3"
     },
     "dependencies": {
-        "bootstrap": "^5.1.0",
-        "jquery": "^3.6.0",
-        "moment": "^2.29.1",
-        "moment-precise-range": "^0.2.0",
-        "tempusdominus-bootstrap-4": "^5.39.0"
+        "date-fns": "^3.0.6"
     }
 }
