--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,6 +20,8 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
-    kotchuprik\short_id\ShortId: ~
+    Hashids\HashidsInterface:
+        class: Hashids\Hashids
+        arguments:
+            $salt: ''
+            $minHashLength: 10
